feat: add update endpoint
