# app/gateways/http/shortener/models/get.go
@@ -1,5 +1,0 @@
-package models
-
-type GetResponse struct {
-	URL string `json:"url"`
-}
